# eawork-backend

./: .dockerignore  .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml
eawork/: __init__.py  admin.py  celery.py  index.py  send_email.py  settings.py  tasks.py  urls.py  wsgi.py
eawork/api/: serializers.py  urls.py  views.py
eawork/apps/job_alerts/: admin.py  apps.py  forms.py  job_alert.py  newsletter.py  views.py
eawork/apps/job_alerts/management/commands/: check_new_jobs_for_all_alerts.py
eawork/apps/job_alerts/templates/job_alerts/: confirmation.html  job_alert.html
eawork/apps/job_alerts/templates/subscription/: base.html  notoken.html  thankyou.html  unsubscribe.html
eawork/apps/job_alerts/tests/: test_job_alerts.py
eawork/apps/job_alerts/tests/fixtures/: json_to_import.json
eawork/apps/tags/: utils.py
eawork/management/commands/: check_new_jobs_for_all_alerts.py  import_80_000_hours.py  import_and_check_new_jobs_for_all_alerts.py  old_import_80_000_hours.py
eawork/migrations/: 0001_initial.py  0002_alter_field_post_to_nullable.py  0003_add_fields_for_jobs.py  0004_add_more_job_fields.py  0005_add_fields_for_company.py  0006_add_model_job_alert.py  0007_rename_job_alert_fields.py  0008_alter_field_job_alert_jobs_seen.py  0009_change_fields_related.py  0010_remove_field_user_username.py  0011_fix_field_author_on_job_post_tag.py  0012_alter_field_job_alert_query_string.py  0013_add_field_version_current.py  0014_add_field_refetch_from_80_000_hours.py  0015_add_model_comment.py  0016_add_field_tags_exp_required.py  0017_add_field_tags_location_80k.py  0018_add_field_job_alert_last_checked_at.py  0019_set_all_jobs_to_80k_importable.py  0020_add_new_company_fields.py  0021_add_unsubscription_model.py  0022_allow_long_query_strings.py  0023_auto_20221026_1651.py  0024_auto_20221027_1250.py  0025_auto_20221104_1041.py  0026_auto_20221107_1241.py  0027_auto_20221108_1138.py  0028_remove_query_strings.py  0029_auto_20221123_1334.py  0030_auto_20221125_1837.py  0031_auto_20221208_1734.py  0032_rename_yearfounded_company_year_founded.py  0033_auto_20221208_1742.py  0034_company_description_short.py  0035_company_additional_commentary.py  0036_auto_20230119_1700.py  0037_jobposttag_link.py  0038_company_headquarters.py
eawork/models/: __init__.py  comment.py  company.py  job_alert.py  job_post.py  post.py  post_job.py  tag.py  unsubscription.py  user.py
eawork/services/: airtable.py  email_log.py  import_80_000_hours.py  job_alert.py
eawork/services/airtable_utils/: get_airtable_data_test.py  title_to_slug.py
eawork/services/templates/: email_log.html
eawork/templates/: email_log.html
eawork/tests/: cases.py  test_job_create.py
eawork/tests/fixtures/: json_to_import.json
